--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
-﻿Task
+<!-- Task
 ========================
 
 Your Grandma wants you to publish her famous cookie recipe to the world wide web, she's typed it out for you in this .html document (she's so nice). 
 
 She absolutely wants the directions to appear in order in a numbered list. The cookies won't taste good if you don't get the order right. (hint you need an ordered list).
 
-Your Grandpa happens to be a great Graphic Designer and gave you the following specs to style:
+Your Grandpa happens to be a great Graphic Designer and gave you the following specs to style: -->
 
 
-The Cookie Recipe
+<!DOCTYPE>
+<h1>The Cookie Recipe</h1>
 =================
 
-The Best Chocolate Chip Cookies
-Recipe by: My Grandma
-Prep Time: 45 Min
+<ul>The Best Chocolate Chip Cookies
+<li>Recipe by: My Grandma</li>
+<li>Prep Time: 45 Min</li>
+</ul>
 
 INGREDIENTS
 1 1/2 cup (3 sticks) softened butter, 1 cup brown sugar, 1 cup granulated sugar, 1 Tbl vanilla instant pudding powder, 2 Tbl milk, 2 Tbl vanilla extract, 2 eggs, 4 cups all purpose flour, 2 tsp baking soda, 1/2 tsp salt, 4 cups chocolate chips, 1 cup chopped walnuts or pecans(optional)
@@ -29,4 +31,5 @@ Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
 
 So, in case you didn't know, your grandma didn't actually make this recipe, it was altered from Open Source Recipe "http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies"
 Sorry to break the news. <!--You must include the link in your final webpage -->
+</html>
 
